    type 1 and 6.
- ALL: Support for new roles and permissions to access the web server API.
- ALL: Added logging to execution stage of batch form.
- ALL: Make "property specification not found" a debug level message.
- JOO: Access rights revisited so that menu-items remain visible in the admin
  menu for people who only have access to the batch send form.
Bugs:
- ALL: Warning: implode(): Invalid arguments passed in Completor.php on line 835.
- ALL: module specific translations were not loaded on case sensitive systems
  (e.g. linux).
- ALL: Warning 511: Incorrect vattype value used (false) in vattype tag as part
  of invoice section in the XML. Using default value of 1(national, regular
  invoice). (CE005BVTC)
- ALL: Message 'message_warning_no_vattype_must_split' was not translated.
- OC: Breadcrumb on settings page was incorrect.

5.4.9 (2018-10-03)
------------------
Features:
- JOO: Add access right to config, advanced config and batch screens.
Bugs:
- JOO: Install/update: Call to a member function getAcumulusConfig() on boolean.
- JOO: Install: File does not exist .../com_acumulus/admin/language/en-GB.com_acumulus.ini

5.4.8 (2018-08-27)
------------------
Bugs:
- OC: SplitLine strategy was removed as having no usages: it turns out that
  OpenCart coupons need it.
- ALL: Error in assigning strategy to the vatrate-source tag in
  CompletorInvoiceLines::addVatRateToLookupLines.
- ALL: Error in initializing possible vat types.
- ALL: Empty country code now handled as NL.
- OC1/OC23: getVatRateLookupByTotalLineType() did not return any tax class id.
- ALL: Handle the case where a vat rate lookup results in multiple vat rates.
- ALL: If a parent line must be handled by the strategy phase , ensure that the
  child lines also are handled by the strategy phase if they have 'vat rate
  source' = 'parent'.

5.4.7 (2018-07-20)
------------------
- ALL: Added an option that covers how to handle missing amounts.
Bugs: